# SmartHealth-MAX30102

./: .gitignore  README.md  ZEPHYR_SETUP.md  hello_argon.ino  platformio.ini
imu_project/: CMakeLists.txt  prj.conf
imu_project/boards/: nrf52840dk_nrf52840.overlay
imu_project/src/: main.c
nrf52840_app/: CMakeLists.txt  prj.conf
nrf52840_app/boards/: nrf52840dk_nrf52840.overlay
nrf52840_app/src/: main.c
particle_app/: app.ino  max30102.cpp  max30102.h
src/: main.c  max30102.c  max30102.h
temp_sensor/: CMakeLists.txt  prj.conf
temp_sensor/boards/: nrf52840dk_nrf52840.overlay
temp_sensor/src/: main.c  temp_sensor.c  temp_sensor.h
temp_test_app/: CMakeLists.txt  prj.conf
temp_test_app/boards/: nrf52840dk_nrf52840.overlay
temp_test_app/src/: main.c
zephyr/: CMakeLists.txt  particle_argon.overlay  prj.conf
